--- a/src/styles/allusers.css
+++ b/src/styles/allusers.css
@@ -1,6 +1,33 @@
+.head {
+   margin-top: 10em;
+   display: flex;
+   flex-direction: row;
+}
 
-h1 {
-    margin-top:10em;
+.sarchwrapper {
+    width: 50vw;
+}
+
+.adduser {
+    margin-left: 20px;
+}
+
+.add{
+    width: 100%;
+    height: 100%;
+    border: 2px solid #ccc;
+    border-radius: 10px; 
+}
+
+.add:hover {
+    background: linear-gradient(45deg, green, lightgreen);
+}
+
+.saerchinput {
+    width: 100%;
+    height: 2em;
+    border: 2px solid #ccc;
+    border-radius: 10px; 
 }
 
 .root {
@@ -35,4 +62,18 @@ h1 {
     background: linear-gradient(45deg, red, lightcoral);
 }
 
+.refreshbutton {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+}
 
+.refreshbutton:hover {
+    background: linear-gradient(45deg, grey, lightgrey);
+    width: 100%;
+}
+
+.refreshwrapper {
+    width: 80vw;
+}
